--- a/Resources/Include/Page/body.html
+++ b/Resources/Include/Page/body.html
@@ -2,8 +2,8 @@
 <body>
     <div id="Master">
 
-<!  ----    Banner ---->
-<div id="banner" > <! start of banner>
+<!----    Banner ---->
+<div id="banner" > <!-- start of banner -->
 	<table width=80% border=0 cellpadding=0 class="banner_txt">
 	  <td align="center" ><a href="<?php echo $groupURL?>/index.shtml" title="Always a nice place to go...">Home</a></td>
 
@@ -13,7 +13,7 @@
 	  <td align="center" ><a href="<?php echo $groupURL?>/Shared/Help/index.shtml" title="Hopefully, the help you need.">Help</a></td>
 	</tr></table>
 <br>
-</div>	<! end of banner>
+</div>	<!-- end of banner -->
 
 	<div id="container" >
 
@@ -21,16 +21,17 @@
 	<?php virtual ($groupURL . "/Shared/mostrecent.html"); ?>
 	<p><hr><P>
 	<?php virtual ($groupURL . "/Shared/projectlist.html"); ?>
-	</div> <! End left sidebar>
+	</div> <!-- End left sidebar -->
 
 	<div id="sidebar_r" class="sidebar_r">
 	<div id="coLabLogo" class="logo"><img src="/coLab/Resources/CoLab_Logo3D.png" height=50 width=50></div> 
-	<! end logo>
+	<!-- end logo -->
 	<?php virtual ("/coLab/Resources/Alert.html"); ?>
 	<?php virtual ("/coLab/Resources/WelcomeMsg.html"); ?>
 	<?php virtual ($groupURL . "/Shared/rightbar.html"); ?>
+
 	<p id="locators"></p>
-	<!--  revisit - find a better way to get tht path in....  -->
+	<!--  revisit - find a better way to get that path in....  -->
 	<a href="/coLab/Resources/php/download.php?dl_dir=<?php echo $page_home; ?>&dl_file=<?php echo $name . '.mp3' ?>"><button
 	type="submit" id="mp3-download-btn" title="Download MP3">Download MP3</button></a>
 	<p>
@@ -46,15 +47,6 @@
 	<p><hr>
 	<?php virtual ($groupURL . "/Shared/News.html"); ?>
 	<?php virtual ("/coLab/Resources/News.html"); ?>
-
-	<table align="right" border=0><tr><td>
-	<a href="http://colorfilter.wickline.org/colorblind/filter/button"
-	target="_blank"><img
-	alt="See your web site through colorblind eyes with the colorblind web
-	page filter."
-	src="http://colorfilter.wickline.org/colorfilter_button.gif" width="88"
-	height="31"></a><br>Colorblind Safe
-	</td></tr></table>
 
 	</div> <! End right sidebar>
 
